--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
       <!DOCTYPE html>
       <html lang="en">
       <head>
+            <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M4MTECN9RH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M4MTECN9RH');
+</script>
+      <meta name="google-site-verification" content="oojtpY1QWqgxqVl_5AGHefH9rGa5CWkI2FzE-eYaTSQ" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CodeX</title>
