--- a/index.html
+++ b/index.html
@@ -1,19 +1,9 @@
       <!DOCTYPE html>
       <html lang="en">
       <head>
-            <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M4MTECN9RH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-M4MTECN9RH');
-</script>
-      <meta name="google-site-verification" content="oojtpY1QWqgxqVl_5AGHefH9rGa5CWkI2FzE-eYaTSQ" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CodeX</title>
+        <title>Web IDE</title>
         <style>:root {
   --font-body: 'Montserrat', sans-serif;
   --font-heading: 'Space Grotesk', sans-serif;
@@ -195,9 +185,10 @@ textarea::-moz-selection { /* For Firefox */
             </nav>
             <div class="flex items-center gap-3">
                 <a href="#demo" class="hidden sm:inline-flex px-4 py-2 rounded-xl bg-white/10 hover:bg-white/15 border border-white/10 transition">Try Demo</a>
-                <a target="_blank" rel="noopener" href="https://apps.apple.com/us/app/web-ide/id6751813522" class="shine inline-flex items-center gap-2 px-4 py-2 rounded-xl shadow-glow transition btn-gradient">
+                
+                <a target="_blank" rel="noopener" href="https://apkpure.com/web-ide/com.webide.glean" class="shine inline-flex items-center gap-2 px-4 py-2 rounded-xl shadow-glow transition btn-gradient">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
-                    <span>Get it on App store</span>
+                    <span>Get it for Android</span>
                 </a>
             </div>
         </div>
@@ -218,10 +209,14 @@ textarea::-moz-selection { /* For Firefox */
             <a href="#hosting" class="hover:text-brand-300 transition" data-menu-link>How to Host</a>
             <a href="#faq" class="hover:text-brand-300 transition" data-menu-link>FAQ</a>
         </nav>
-        <div class="mt-8">
+        <div class="mt-8 flex flex-col items-center gap-3"> <!-- Added flex-col and gap for vertical button stacking -->
             <a target="_blank" rel="noopener" href="https://apps.apple.com/us/app/web-ide/id6751813522" class="shine inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow transition btn-gradient text-lg">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                 <span>Get it on App store</span>
+            </a>
+            <a target="_blank" rel="noopener" href="https://apkpure.com/web-ide/com.webide.glean" class="shine inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow transition btn-gradient text-lg">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
+                <span>Get it for Android</span>
             </a>
         </div>
     </div>
@@ -249,6 +244,10 @@ textarea::-moz-selection { /* For Firefox */
                         <a target="_blank" rel="noopener" href="https://apps.apple.com/us/app/web-ide/id6751813522" class="shine inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow transition btn-gradient">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                             <span class="font-semibold">Get it on App store</span>
+                        </a>
+                        <a target="_blank" rel="noopener" href="https://apkpure.com/web-ide/com.webide.glean" class="shine inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow transition btn-gradient">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
+                            <span class="font-semibold">Get it for Android</span>
                         </a>
                         <a href="#demo" class="inline-flex items-center gap-2 px-5 py-3 rounded-xl bg-white/10 hover:bg-white/15 border border-white/10 transition">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M8 5l10 7-10 7V5Z" fill="white"/></svg>
@@ -562,10 +561,16 @@ textarea::-moz-selection { /* For Firefox */
                 <div class="text-sm text-white/60 mt-2">Build websites on your phone. Fast. Simple. Anywhere.</div>
             </div>
             <div class="md:text-right">
-                <a target="_blank" rel="noopener" href="https://apps.apple.com/us/app/web-ide/id6751813522" class="inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow btn-gradient">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
-                    Get it on App store
-                </a>
+                <div class="flex items-center justify-end gap-3"> <!-- New wrapper for buttons -->
+                    <a target="_blank" rel="noopener" href="https://apps.apple.com/us/app/web-ide/id6751813522" class="inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow btn-gradient">
+                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
+                        Get it on App store
+                    </a>
+                    <a target="_blank" rel="noopener" href="https://apkpure.com/web-ide/com.webide.glean" class="inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow btn-gradient">
+                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
+                        Get it for Android
+                    </a>
+                </div>
             </div>
         </div>
         <div class="mx-auto max-w-7xl px-6 pb-10 text-xs text-white/50">
