--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
       <!DOCTYPE html>
       <html lang="en">
       <head>
-            <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M4MTECN9RH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-M4MTECN9RH');
-</script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Web IDE</title>
@@ -195,7 +186,7 @@ textarea::-moz-selection { /* For Firefox */
             <div class="flex items-center gap-3">
                 <a href="#demo" class="hidden sm:inline-flex px-4 py-2 rounded-xl bg-white/10 hover:bg-white/15 border border-white/10 transition">Try Demo</a>
                 
-                <a target="_blank" rel="noopener" href="https://apkpure.com/web-ide/com.webide.glean" class="shine inline-flex items-center gap-2 px-4 py-2 rounded-xl shadow-glow transition btn-gradient">
+                <a href="#" class="shine inline-flex items-center gap-2 px-4 py-2 rounded-xl shadow-glow transition btn-gradient">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                     <span>Get it for Android</span>
                 </a>
@@ -223,7 +214,7 @@ textarea::-moz-selection { /* For Firefox */
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                 <span>Get it on App store</span>
             </a>
-            <a target="_blank" rel="noopener" href="https://apkpure.com/web-ide/com.webide.glean" class="shine inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow transition btn-gradient text-lg">
+            <a href="#" class="shine inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow transition btn-gradient text-lg">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                 <span>Get it for Android</span>
             </a>
@@ -254,7 +245,7 @@ textarea::-moz-selection { /* For Firefox */
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                             <span class="font-semibold">Get it on App store</span>
                         </a>
-                        <a target="_blank" rel="noopener" href="https://apkpure.com/web-ide/com.webide.glean" class="shine inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow transition btn-gradient">
+                        <a href="#" class="shine inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow transition btn-gradient">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                             <span class="font-semibold">Get it for Android</span>
                         </a>
@@ -301,6 +292,25 @@ textarea::-moz-selection { /* For Firefox */
             </div>
         </div>
     </section>
+
+    <!-- AdSense Banner -->
+    <div class="mx-auto max-w-7xl px-6 py-8 md:py-12">
+        <div class="rounded-2xl border border-white/10 bg-white/5 p-4 md:p-6 flex justify-center items-center min-h-[100px]">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7032818106673619"
+             crossorigin="anonymous"></script>
+            <!-- Banner -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-7032818106673619"
+                 data-ad-slot="8389656403"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+    </div>
+    <!-- End AdSense Banner -->
 
     <!-- Logos / social proof -->
     <section class="mx-auto max-w-7xl px-6">
@@ -575,7 +585,7 @@ textarea::-moz-selection { /* For Firefox */
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                         Get it on App store
                     </a>
-                    <a target="_blank" rel="noopener" href="https://apkpure.com/web-ide/com.webide.glean" class="inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow btn-gradient">
+                    <a href="#" class="inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow btn-gradient">
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                         Get it for Android
                     </a>
