--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
       <html lang="en">
       <head>
             <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17601191424"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17601191424');
+</script>
+            <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-M4MTECN9RH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
