--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
       <!DOCTYPE html>
       <html lang="en">
       <head>
+            <!-- Event snippet for Page view conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17601191424/7WEwCKza8qEbEIC888hB',
+      'value': 1.0,
+      'currency': 'USD'
+  });
+</script>
+            
             <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17601191424"></script>
 <script>
@@ -10,6 +19,8 @@
 
   gtag('config', 'AW-17601191424');
 </script>
+
+            
             <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-M4MTECN9RH"></script>
 <script>
