--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
       <!DOCTYPE html>
       <html lang="en">
       <head>
+            <meta name="google-site-verification" content="b8fkxe3FxUrP0aD5JGbJgzOWOylZGlx976ES1DSL8w8" />
             <meta name="google-site-verification" content="wqLZENnKJKS23vpg0J_4sRI5TxQy8aqTvYaZ60BcvxE" />
             <meta name="monetag" content="2cfd1f17abac13d223d4544fda338299">
 <!-- Event snippet for Page view conversion page -->
