--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="flex items-center gap-3">
                 <a href="#demo" class="hidden sm:inline-flex px-4 py-2 rounded-xl bg-white/10 hover:bg-white/15 border border-white/10 transition">Try Demo</a>
                 
-                <a target="_blank" rel="noopener" href="http://bit.ly/downloadwebide" class="shine inline-flex items-center gap-2 px-4 py-2 rounded-xl shadow-glow transition btn-gradient">
+                <a target="_blank" rel="noopener" href="https://web-ide.en.uptodown.com/android/download" class="shine inline-flex items-center gap-2 px-4 py-2 rounded-xl shadow-glow transition btn-gradient">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                     <span>Get it for Android</span>
                 </a>
@@ -115,7 +115,7 @@
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                 <span>Get it on App store</span>
             </a>
-            <a target="_blank" rel="noopener" href="http://bit.ly/downloadwebide" class="shine inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow transition btn-gradient text-lg">
+            <a target="_blank" rel="noopener" href="https://web-ide.en.uptodown.com/android/download" class="shine inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow transition btn-gradient text-lg">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                 <span>Get it for Android</span>
             </a>
@@ -154,7 +154,7 @@
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                             <span class="font-semibold">Get it on App store</span>
                         </a>
-                        <a target="_blank" rel="noopener" href="http://bit.ly/downloadwebide" class="shine inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow transition btn-gradient">
+                        <a target="_blank" rel="noopener" href="https://web-ide.en.uptodown.com/android/download" class="shine inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow transition btn-gradient">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                             <span class="font-semibold">Get it for Android</span>
                         </a>
@@ -573,7 +573,7 @@
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                         Get it on App store
                     </a>
-                    <a target="_blank" rel="noopener" href="http://bit.ly/downloadwebide" class="inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow btn-gradient">
+                    <a target="_blank" rel="noopener" href="https://web-ide.en.uptodown.com/android/download" class="inline-flex items-center gap-2 px-5 py-3 rounded-xl shadow-glow btn-gradient">
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z" fill="currentColor" class="text-black/20"/><path d="M8 7h5l3 5-3 5H8l3-5-3-5Z" fill="white"/></svg>
                         Get it for Android
                     </a>
