--- a/index.html
+++ b/index.html
@@ -896,9 +896,9 @@ justify-content: center;</code>
                 </div>
             </div>
             <div class="flex flex-col md:flex-row items-center justify-between pt-8 border-t border-white/10 text-sm text-white/40 scroll-fade-in" data-scroll-delay="100">
-                <div>&copy; <span id="year"></span> Web IDE Inc.</div>
+                <div>&copy; <span id="year"></span> Web IDE app.</div>
                 <div class="mt-4 md:mt-0">
-                    Designed with ❤️ and code.
+                    Designed with ❤️ by Chuyong Glean.
                 </div>
             </div>
         </div>
