--- a/index.html
+++ b/index.html
@@ -1,42 +1,6 @@
       <!DOCTYPE html>
       <html lang="en">
       <head>
-<meta name="google-site-verification" content="b8fkxe3FxUrP0aD5JGbJgzOWOylZGlx976ES1DSL8w8" />
-    <meta name="google-site-verification" content="wqLZENnKJKS23vpg0J_4sRI5TxQy8aqTvYaZ60BcvxE" />
-    <meta name="monetag" content="2cfd1f17abac13d223d4544fda338299">
-    <!-- Event snippet for Page view conversion page -->
-    <script>
-        gtag('event', 'conversion', {
-            'send_to': 'AW-17601191424/7WEwCKza8qEbEIC888hB',
-            'value': 1.0,
-            'currency': 'USD'
-        });
-    </script>
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17601191424"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'AW-17601191424');
-    </script>
-
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M4MTECN9RH"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-M4MTECN9RH');
-    </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7032818106673619"
-        crossorigin="anonymous"></script>
-            
-            
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Web IDE</title>
@@ -77,7 +41,7 @@
     <script>
         // Set theme from localStorage before body renders to prevent FOUC
         (function() {
-            const theme = localStorage.getItem('theme') || 'light';
+            const theme = localStorage.getItem('theme') || 'dark';
             if (theme === 'light') {
                 document.documentElement.classList.add('light');
             } else {
@@ -186,26 +150,26 @@
                     <p class="text-lg md:text-xl text-white/60 mb-10 max-w-lg leading-relaxed animate-fade-up opacity-0" style="animation-delay: 0.3s">
                         The most powerful mobile web editor. Write HTML, CSS, and JS with smart autocomplete, live preview, and one-tap publishing.
                     </p>
-                    <div class="flex items-center gap-4 animate-fade-up opacity-0" style="animation-delay: 0.4s">
+                    <div class="flex flex-wrap justify-center sm:justify-start items-center gap-4 animate-fade-up opacity-0" style="animation-delay: 0.4s">
                         <a href="https://apps.apple.com/us/app/web-ide/id6751813522" target="_blank" class="group relative px-6 py-4 h-[60px] bg-white text-black rounded-2xl font-bold text-lg transition hover:scale-[1.02] hover:shadow-[0_0_40px_-10px_rgba(255,255,255,0.5)] overflow-hidden">
                             <div class="absolute inset-0 bg-gradient-to-r from-transparent via-white/50 to-transparent -translate-x-full group-hover:animate-shimmer"></div>
-                            <span class="flex items-center gap-2">
+                            <span class="flex items-center gap-2 whitespace-nowrap">
                                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.8-1.31.02-2.3-1.23-3.14-2.47-1.71-2.53-2.97-6.87-.09-9.66 1.36-1.34 3.21-1.61 4.3-1.59 1.27.02 2.16.87 2.86.87.67 0 2-.9 3.42-.85 1.14.05 2.23.47 3.04 1.22-2.69 1.68-2.22 5.76.52 6.97zM13 5c.66-1.04 1.18-2.43 1.07-3.86-1.16.09-2.74.84-3.6 1.84-.75.86-1.39 2.28-1.21 3.75 1.29.1 2.6-.65 3.74-1.73z"/></svg>
                                 App Store
                             </span>
                         </a>
                         <a href="https://web-ide.en.uptodown.com/android/download" target="_blank" class="group relative px-6 py-4 h-[60px] bg-[#3DDC84] text-black rounded-2xl font-bold text-lg transition hover:scale-[1.02] hover:shadow-[0_0_40px_-10px_rgba(61,220,132,0.5)] overflow-hidden">
                             <div class="absolute inset-0 bg-gradient-to-r from-transparent via-white/50 to-transparent -translate-x-full group-hover:animate-shimmer"></div>
-                            <span class="flex items-center gap-2">
+                            <span class="flex items-center gap-2 whitespace-nowrap">
                                 <svg class="w-5 h-5" viewBox="0 0 24 24" fill="currentColor"><path d="M17.523 15.3414c-.5511 0-.9993-.4486-.9993-.9997s.4482-.9993.9993-.9993c.551 0 .9996.4482.9996.9993s-.4486.9997-.9996.9997m-11.046 0c-.5511 0-.9993-.4486-.9993-.9997s.4482-.9993.9993-.9993c.551 0 .9996.4482.9996.9993s-.4486.9997-.9996.9997m11.4045-6.02l1.9973-3.4592a.416.416 0 00-.1521-.5676.416.416 0 00-.5676.1521l-2.0225 3.503c-1.6705-.765-3.5555-1.204-5.5984-1.204-2.0428 0-3.9279.439-5.5984 1.204l-2.0225-3.503a.416.416 0 00-.5676-.1521.416.416 0 00-.1521.5676l1.9973 3.4592C2.6889 11.1867.344 14.6589.344 18.7174h23.312c0-4.0585-2.3449-7.5307-6.8568-9.396"/></svg>
                                 Android
                             </span>
                         </a>
                     </div>
                     <!-- Floating Text for Offer Code -->
-                    <div class="mt-8 text-white/40 text-sm font-medium pointer-events-none text-center w-full animate-fade-up opacity-0" style="animation-delay: 0.5s">
-                          Scroll to the bottom for Web IDE offer code ↓
-                    </div>
+                    <a href="#offer-code" id="scroll-to-offer" class="block text-center w-full mt-8 text-sm font-medium cursor-pointer text-white/40 hover:text-white transition animate-fade-up opacity-0" style="animation-delay: 0.5s">
+                        <span class="inline-block animate-bounce-y">Scroll to the bottom for Web IDE offer code ↓</span>
+                    </a>
                 </div>
 
                 <!-- Phone Mockup -->
@@ -398,7 +362,7 @@ justify-content: center;</code>
                 <div class="bg-[#1e293b] px-4 py-3 border-b border-white/5 flex items-center justify-between shrink-0">
                     <div class="flex items-center gap-2">
                         <div class="flex gap-1.5">
-                            <div class="w-3 h-3 rounded-full bg-[#ff5f56"></div>
+                            <div class="w-3 h-3 rounded-full bg-[#ff5f56]"></div>
                             <div class="w-3 h-3 rounded-full bg-[#ffbd2e]"></div>
                             <div class="w-3 h-3 rounded-full bg-[#27c93f]"></div>
                         </div>
@@ -898,7 +862,7 @@ justify-content: center;</code>
             <div class="flex flex-col md:flex-row items-center justify-between pt-8 border-t border-white/10 text-sm text-white/40 scroll-fade-in" data-scroll-delay="100">
                 <div>&copy; <span id="year"></span> Web IDE app.</div>
                 <div class="mt-4 md:mt-0">
-                    Designed with ❤️ by Chuyong Glean.
+                    Created with ❤️ by Chuyong Glean.
                 </div>
             </div>
         </div>
@@ -916,6 +880,7 @@ justify-content: center;</code>
     <script src="js/main.js" defer></script>
 </body>
 </html>
+
         <script src="script.js"></script>
       </body>
       </html>
