--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -46,7 +46,7 @@
     </header>
 
     <!-- Content -->
-    <section class="pt-32 pb-20 px-6 min-h-screen flex flex-col justify-center relative overflow-hidden">
+    <section class="pt-24 pb-16 md:pt-32 md:pb-20 px-6 min-h-screen flex flex-col justify-center relative overflow-hidden">
         <!-- Background Gradients -->
         <div class="absolute top-0 right-0 w-[500px] h-[500px] bg-brand-500/10 rounded-full blur-[100px] -z-10"></div>
         <div class="absolute bottom-0 left-0 w-[500px] h-[500px] bg-accent-dark/10 rounded-full blur-[100px] -z-10"></div>
@@ -57,7 +57,7 @@
                 <p class="text-white/60">Have a question or feedback? We're here to help.</p>
             </div>
 
-            <form id="contactForm" class="space-y-4 bg-white/5 p-8 rounded-3xl border border-white/10 shadow-2xl backdrop-blur-sm">
+            <form id="contactForm" class="space-y-4 bg-white/5 p-6 md:p-8 rounded-3xl border border-white/10 shadow-2xl backdrop-blur-sm">
                 <div>
                     <label class="block text-sm font-medium text-white/70 mb-2">Name</label>
                     <input type="text" placeholder="John Doe" class="w-full p-4 rounded-xl bg-black/20 border border-white/10 focus:border-brand-500 focus:bg-white/5 outline-none transition text-white" required="">
