--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 
                                         <!-- Revealed Text (Hidden by default) -->
                                         <div id="offerCodeText" class="absolute inset-0 flex items-center justify-center opacity-0 scale-90 blur-sm pointer-events-none transition-all duration-500">
-                                            <span class="text-3xl md:text-4xl font-mono font-bold offer-code-text tracking-wider text-transparent bg-clip-text bg-gradient-to-r from-brand-400 via-white to-accent-light">WEBIDE2025</span>
+                                            <span class="text-3xl md:text-4xl font-mono font-bold offer-code-text tracking-wider text-transparent bg-clip-text bg-gradient-to-r from-brand-400 via-white to-accent-light">W5B7I4EM8K9</span>
                                         </div>
                                     </div>
                                 </div>
