--- a/pages/privacy/index.html
+++ b/pages/privacy/index.html
@@ -25,61 +25,37 @@
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="../docs/style.css"><link rel="stylesheet" href="../blog/style.css"><link rel="stylesheet" href="../blog/styles/post.css"><link rel="stylesheet" href="../about/style.css"><link rel="stylesheet" href="../contact/style.css"><link rel="stylesheet" href="../terms/style.css"></head>
-<body class="font-body text-slate-900 bg-main antialiased selection:bg-brand-500/30 selection:text-brand-700 overflow-x-hidden">
+<body class="font-body text-slate-50 bg-main antialiased selection:bg-brand-500/30 selection:text-brand-200 overflow-x-hidden">
 
     <!-- Header -->
-    <header class="fixed w-full top-0 z-50 transition-all duration-300 border-b border-gray-200 bg-white/90 backdrop-blur-md">
+    <header class="fixed w-full top-0 z-50 transition-all duration-300 border-b border-white/10 bg-[#050505]/95 backdrop-blur-md">
         <div class="mx-auto max-w-7xl px-6">
             <div class="flex items-center justify-between h-16">
                 <a href="../../index.html" class="flex items-center gap-3 group">
-                     <img src="../../assets/icon/webidesqaureicon.jpg" alt="Web IDE" class="w-8 h-8 rounded-lg border border-gray-200 shadow-sm">
-                    <span class="font-heading font-bold text-lg text-slate-900">Web IDE <span class="text-slate-400 font-normal">Privacy</span></span>
+                     <img src="../../assets/icon/webidesqaureicon.jpg" alt="Web IDE" class="w-8 h-8 rounded-lg border border-white/10 shadow-sm">
+                    <span class="font-heading font-bold text-lg text-white">Web IDE <span class="text-white/40 font-normal">Privacy</span></span>
                 </a>
-                
-                <nav class="hidden md:flex items-center gap-8">
-                    <a href="../../index.html" class="text-sm font-medium text-slate-600 hover:text-brand-600 transition">Home</a>
-                    <a href="../contact/index.html" class="text-sm font-medium text-slate-600 hover:text-brand-600 transition">Contact</a>
+                <nav class="hidden md:flex items-center gap-6">
+                     <a href="../../index.html" class="text-sm font-medium text-white/60 hover:text-white transition">Home</a>
+                     <a href="../contact/index.html" class="text-sm font-medium text-white/60 hover:text-white transition">Contact</a>
                 </nav>
-
-                <!-- Mobile Toggle -->
-                <button id="mobileMenuToggle" class="md:hidden p-2 text-slate-600 hover:text-slate-900 transition">
-                     <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
-                </button>
             </div>
         </div>
     </header>
 
-    <!-- Mobile Menu Overlay -->
-    <div id="mobileMenuOverlay" class="fixed inset-0 bg-white/98 z-[60] hidden opacity-0 transition-opacity duration-300">
-        <div class="absolute top-6 right-6">
-            <button id="closeMobileMenuButton" class="p-2 rounded-full bg-gray-100 text-slate-900 hover:bg-gray-200 transition">
-                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                    <line x1="18" y1="6" x2="6" y2="18"></line>
-                    <line x1="6" y1="6" x2="18" y2="18"></line>
-                </svg>
-            </button>
-        </div>
-        <div class="h-full flex flex-col items-center justify-center gap-8 p-6">
-            <nav class="flex flex-col items-center gap-8 text-3xl font-heading font-bold text-slate-900">
-                <a href="../../index.html" class="hover:text-brand-500 transition transform hover:scale-110" data-menu-link="">Home</a>
-                <a href="../contact/index.html" class="hover:text-brand-500 transition transform hover:scale-110" data-menu-link="">Contact</a>
-            </nav>
-        </div>
-    </div>
-
     <!-- Content -->
     <section class="pt-32 pb-20 px-6">
         <div class="container mx-auto max-w-3xl">
-            <h1 class="text-4xl md:text-5xl font-heading font-bold mb-10 text-slate-900">Privacy Policy</h1>
+            <h1 class="text-4xl md:text-5xl font-heading font-bold mb-10">Privacy Policy</h1>
             
-            <div class="prose prose-lg text-slate-600 max-w-none">
+            <div class="prose prose-lg prose-invert max-w-none text-white/70">
                 <p>Last updated: October 27, 2023</p>
                 <p>At Web IDE, we take your privacy seriously. This Privacy Policy explains how we collect, use, and protect your personal information.</p>
 
-                <h3 class="text-slate-900 font-bold text-xl mt-8 mb-4">1. Information We Collect</h3>
+                <h3 class="text-white font-bold text-xl mt-8 mb-4">1. Information We Collect</h3>
                 <p>We collect information that you provide directly to us, such as when you create an account, subscribe to our newsletter, or contact us for support. This may include your email address, name, and usage data.</p>
 
-                <h3 class="text-slate-900 font-bold text-xl mt-8 mb-4">2. How We Use Your Information</h3>
+                <h3 class="text-white font-bold text-xl mt-8 mb-4">2. How We Use Your Information</h3>
                 <ul class="list-disc pl-5 space-y-2">
                     <li>To provide and maintain our Service.</li>
                     <li>To notify you about changes to our Service.</li>
@@ -87,21 +63,28 @@
                     <li>To monitor the usage of the Service.</li>
                 </ul>
 
-                <h3 class="text-slate-900 font-bold text-xl mt-8 mb-4">3. Local Data Storage</h3>
+                <h3 class="text-white font-bold text-xl mt-8 mb-4">3. Local Data Storage</h3>
                 <p>Web IDE is designed to run locally on your device. Your code projects, files, and assets are stored on your device's local storage and are not uploaded to our servers unless you explicitly choose to export or sync them.</p>
 
-                <h3 class="text-slate-900 font-bold text-xl mt-8 mb-4">4. Contact Us</h3>
-                <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:privacy@webide.app" class="text-brand-600 hover:underline">privacy@webide.app</a>.</p>
+                <h3 class="text-white font-bold text-xl mt-8 mb-4">4. Contact Us</h3>
+                <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:privacy@webide.app" class="text-brand-400">privacy@webide.app</a>.</p>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="border-t border-gray-200 bg-gray-50 pt-12 pb-8">
+    <footer class="border-t border-white/10 bg-black/40 backdrop-blur-sm pt-12 pb-8">
         <div class="container mx-auto max-w-7xl px-6 flex flex-col items-center">
-             <div class="text-sm text-slate-500">© <span id="year"></span> Web IDE app. All rights reserved.</div>
+             <div class="text-sm text-white/40">© <span id="year"></span> Web IDE app. All rights reserved.</div>
         </div>
     </footer>
 
-    <script src="../../script.js"></script>
-<script src="../docs/script.js"></script><script src="../blog/script.js"></script><script src="../blog/actions/interactions.js"></script><script src="../about/script.js"></script><script src="../contact/script.js"></script></body></html>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const theme = localStorage.getItem('theme');
+            if (theme === 'light') document.documentElement.classList.add('light');
+            document.getElementById('year').textContent = new Date().getFullYear();
+        });
+    </script>
+
+<script src="../../script.js"></script><script src="../docs/script.js"></script><script src="../blog/script.js"></script><script src="../blog/actions/interactions.js"></script><script src="../about/script.js"></script><script src="../contact/script.js"></script></body></html>
