--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <span class="text-transparent bg-clip-text bg-gradient-to-r from-brand-400 via-accent-light to-purple-400 animate-gradient-x">without limits.</span>
                         </h1>
                         <p class="text-lg md:text-xl text-white/60 mb-8 md:mb-10 max-w-lg leading-relaxed animate-fade-up opacity-0" style="animation-delay: 0.3s">
-                            Web IDE is an AI‑powered mobile code editor and web development environment that turns your iPhone into a full web‑building studio.
+                            Web IDE is an AI‑powered mobile code editor and web development environment that turns your Mobile phone into a full web‑building studio.
                         </p>
                         <div class="flex flex-wrap justify-center sm:justify-start items-center gap-4 animate-fade-up opacity-0" style="animation-delay: 0.4s">
                             <a href="pages/docs/index.html" class="group relative px-6 py-4 h-[60px] bg-white text-black rounded-2xl font-bold text-lg transition hover:scale-[1.02] hover:shadow-[0_0_40px_-10px_rgba(255,255,255,0.5)] overflow-hidden">
