bug fixes (index.html)

--- a/index.html
+++ b/index.html
@@ -182,15 +182,15 @@
                             The most powerful mobile web editor. Prompt, code, live preview, and Ship Easily.
                         </p>
                         <div class="flex flex-wrap justify-center sm:justify-start items-center gap-4 animate-fade-up opacity-0" style="animation-delay: 0.4s">
-                            <a href="pages/docs/index.html" class="group relative px-6 py-4 h-[60px] bg-slate-900 text-white rounded-2xl font-bold text-lg transition hover:scale-[1.02] hover:shadow-xl overflow-hidden">
+                            <a href="pages/docs/index.html" class="group relative px-6 py-4 h-[60px] bg-slate-900 text-white rounded-2xl font-bold text-lg transition hover:scale-[1.02] hover:shadow-xl overflow-hidden flex items-center justify-center">
                                 <div class="absolute inset-0 bg-gradient-to-r from-transparent via-white/10 to-transparent -translate-x-full group-hover:animate-shimmer"></div>
-                                <span class="flex items-center gap-2 whitespace-nowrap">
+                                <span class="flex items-center gap-2 whitespace-nowrap z-10">
                                     Install Now
                                     <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
                                 </span>
                             </a>
-                            <a href="pages/blog/index.html" class="group relative px-6 py-4 h-[60px] bg-slate-100 text-slate-900 border border-slate-200 rounded-2xl font-bold text-lg transition hover:bg-slate-200 backdrop-blur-md overflow-hidden">
-                                <span class="flex items-center gap-2 whitespace-nowrap">
+                            <a href="pages/blog/index.html" class="group relative px-6 py-4 h-[60px] bg-slate-100 text-slate-900 border border-slate-200 rounded-2xl font-bold text-lg transition hover:bg-slate-200 backdrop-blur-md overflow-hidden flex items-center justify-center">
+                                <span class="flex items-center gap-2 whitespace-nowrap z-10">
                                     Visit Blog
                                 </span>
                             </a>
@@ -466,8 +466,8 @@
                                     </div>
                                 </div>
 
-                                <button id="offerCodeBtn" data-state="get" class="offer-copy-btn px-8 py-4 rounded-xl font-bold text-lg shadow-lg hover:bg-slate-800 transition-all hover:-translate-y-1 active:scale-95 bg-slate-900 text-white disabled:opacity-70 disabled:cursor-not-allowed">
-                                    <span id="offerBtnText">Get Code</span>
+                                <button id="offerCodeBtn" data-state="get" class="offer-copy-btn px-8 py-4 rounded-xl font-bold text-lg shadow-lg hover:bg-slate-800 transition-all hover:-translate-y-1 active:scale-95 bg-slate-900 text-white disabled:opacity-70 disabled:cursor-not-allowed flex items-center justify-center">
+                                    <span id="offerBtnText" class="z-10">Get Code</span>
                                 </button>
                                 
                                 <p class="text-xs text-slate-400 mt-2">Limited time offer. Terms apply.</p>
